Added injections, but changed the injection value type from Object meaning String and String[] to List<String>>